# swapperrr

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
problem1/: Cargo.toml  README.md
problem1/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src/cli/: display.rs  mod.rs
src/cli/commands/: mod.rs  pools.rs  quote.rs  swap.rs  token_pools.rs  wrap.rs
src/core/: config.rs  constants.rs  error.rs  layouts.rs  mod.rs  price_calculator.rs  serum_market.rs  token_metadata.rs  token_metadata_async.rs  types.rs
src/discovery/: amm_pool_parser.rs  clmm_pool_parser.rs  clmm_pool_parser_optimized.rs  cp_pool_parser.rs  mod.rs  pool_cache.rs  pool_finder.rs  pool_scorer.rs  stable_pool_parser.rs
src/quotes/: amm_calculator.rs  clmm_calculator.rs  mod.rs  stable_calculator.rs  standard_calculator.rs
src/selection/: mod.rs
src/transaction/: alt.rs  amm_swap.rs  clmm_swap.rs  cp_swap.rs  mod.rs  monitor.rs  stable_swap.rs  wsol.rs
src/utils/: mod.rs
