[package]
name = "raydium-multipool-swap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raydium-multipool-swap"
path = "src/main.rs"

[[bin]]
name = "check_tx"
path = "check_tx.rs"

[dependencies]
# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0"
spl-associated-token-account = "3.0"

# Async
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "1.5"
bs58 = "0.5"
base64 = "0.22"

# Math & Numbers
rust_decimal = "1.36"

# Caching
dashmap = "6.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
dialoguer = "0.11"
console = "0.15"
lazy_static = "1.5"
colored = "2.1"
indicatif = "0.17"

# Utils
dotenv = "0.15"
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

